--- a/src/pages/common/Header/Header.css
+++ b/src/pages/common/Header/Header.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
-    background-color: darkcyan;
+    background-color: rgb(255, 0, 0);
 }
 
 
